#ifndef _ARGS_H
#define _ARGS_H

#include "input.hpp"

class args : public Input<char>
{
};

#endif